--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,9 @@
-name = "matzip-map-demo"
-pages_build_output_dir = "dist"
-compatibility_date = "2023-10-01"
+name = "matzip-api"
+main = "src/worker.js"
+compatibility_date = "2024-09-19"
+assets = { directory = "dist" }
 
-[build]
-command = "npm run build"
+[[d1_databases]]
+binding = "DB"
+database_name = "matzip"
+database_id = "a79357b7-0549-4b73-a8de-391455a00bf9"
