--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "wrangler pages deploy dist"
+    "dev:worker": "wrangler dev --port 3000",
+    "deploy": "wrangler deploy"
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "^0.4.0",
